# graphene

./: .env.example  .gitignore  DOCS.md  README.md  graphene-intel-plan.md  pyproject.toml  readme-context.md
.claude/: settings.json
config/: alerts.yaml  sources.yaml  tickers.yaml
deploy/: crontab  dashboard.service  gen_cert.sh  nginx-dashboard.conf  setup.sh
docs/: DOCS.md  telegram-html-guide.md
scripts/: collect.py  daily_summary.py  evaluate.py  price_check.py  setup_telegram.py  weekly_report.py
src/analysis/: __init__.py  daily_summary.py  weekly_report.py
src/collectors/: __init__.py  base.py  company_news.py  finra_short.py  google_news.py  google_trends.py  ibkr_flex.py  otc_markets.py  patents.py  price.py  reddit.py  rss.py  sec_edgar.py  sedi.py  stocktwits.py  tickertick.py
src/db/: models.py  store.py
src/evaluator/: __init__.py  anomaly.py  context.py  prompts.py  scorer.py
src/notifier/: formatter.py  telegram.py
src/utils/: __init__.py  dedup.py  http.py  logging.py
web/: app.py
web/templates/: alert_detail.html  base.html  dashboard.html  login.html
